2004-09-23  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/policytest.c:
	    Use rate-limiter ONLY to make REJECTs, don't use "not limited"
	    to mean: "acceptable!"

2004-09-21  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/mxverify.c, man/smtpserver.8.in:
	    Remove the old hard-coded '+' macro that is no longer valid..
	    Also warn about RBLs being rather ephemeral in nature..

	* smtpserver/policytest.c, smtpserver/subdaemon-trk.c:
	    Some initial experiments on adding RCPT counting in
	    rate-tracking.

	* smtpserver/subdaemon-rtr.c:
	    Report (into log) if the i-router subsystem response
	    time exceeds 30 seconds.

	* smtpserver/subdaemons.c:
	    Change a bit of the round-robinny processing details.
	    It may (or may not) improve sometimes observed long
	    delays..

2004-09-10  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/subdaemons.c:
	    Changed the client input pickup methodology back into
	    "prefer lowest slot" (instead of round-robin).
	    It just didn't work :-(  (probably broken logic
	    somewhere in there..)

	* smtpserver/smtpchild.c:
	    Account childs by type, not all together..  (oops..)

2004-09-09  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/subdaemon-rtr.c:
	    Changed subprocess instance abstraction details
	    so, that there are no absolutely fixed array sizes.

	* smtpserver/subdaemons.c:
	    Changed processed client input pickup methodology into
	    "process in round-robin manner" (as opposed to "lowest
	    slot first -- which can be seriously pessimal approach.

2004-09-07  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/mxverify.c:
	    Source DNS verification went into woods a bit...
	    If the intention is to accept the MAIL FROM, if
	    it has just any DNS data, do so.

2004-09-06  Matti Aarnio  <mea@zmailer.org>

	* include/mailer.h, include/libz.h, lib/rfc822scan.c,
	  router/functions.c, router/prototypes.h, router/rfc822.c,
	  router/rfc822hdrs.c, router/shliaise.c: